syntax = "proto3";

option csharp_namespace = "MicroserviceAralik.Discount.Protos";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service CouponRedemptionService{
	rpc GetCouponRedemptionById(GetCouponRedemptionByIdRequest) returns (GetCouponRedemptionResponse){
        option (google.api.http) = {
            get: "/api/couponredemptions/{id}"
        };
    }
	rpc GetAllRedemptions(EmptyRedemption) returns (GetCouponRedemptionResponses)
	{
        option (google.api.http) = {
            get: "/api/couponredemptions"
        };
    }

	rpc CreateRedemption(CreateRedemptionRequest) returns (GetCouponRedemptionResponse)
	{
        option (google.api.http) = {
            post: "/api/couponredemptions",
			body:"*"
        };
    }
	rpc UpdateRedemption(UpdateRedemptionRequest) returns	(GetCouponRedemptionResponse)
	{
        option (google.api.http) = {
            put: "/api/couponredemptions",
			body:"*"
        };
    }
	rpc DeleteRedemption(DeleteRedemptionRequest) returns (DeleteRedemptionResponse)
	{
        option (google.api.http) = {
            delete: "/api/couponredemptions/{id}",
			 
        };
    }
}
message GetCouponRedemptionByIdRequest{
	int32 id=1;
}
message GetCouponRedemptionResponse{
	int32 id=1;
	int32 couponId=2;
	string userId=3;
	google.protobuf.Timestamp redemptionDate=4;
	int32 discountRate=5;
}
message GetCouponRedemptionResponses{
	repeated GetCouponRedemptionResponse redemptions=1;
}
message CreateRedemptionRequest{
	GetCouponRedemptionResponse redemption=1;
}
message UpdateRedemptionRequest{
	GetCouponRedemptionResponse redemption=1;
}
message DeleteRedemptionRequest{
	int32 id=1;
}
message DeleteRedemptionResponse{
	bool isDeleted=1;
}
message EmptyRedemption{}


